[package]
name = "ldict"
version = "1.0.0"
edition = "2021"
authors = ["shuntia <shuntia@shuntia.net>"]
description="A command line latin dictionary."
readme="README.md"
homepage="https://github.com/shuntia/latin"
repository="https://github.com/shuntia/latin"
license="MIT OR Apache-2.0"
categories=["command-line-utilities"]
keywords=["latin","dictionary"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.8", features = ["derive"] }
indicatif = { version = "0.17", features = ["tokio"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "io-util"] }
