[package]
name = "ldict"
version = "1.1.0"
edition = "2021"
authors = ["shuntia <shuntia@shuntia.net>"]
description="A command line latin dictionary."
readme="README.md"
homepage="https://github.com/shuntia/latin"
repository="https://github.com/shuntia/latin"
license="MIT OR Apache-2.0"
categories=["command-line-utilities"]
keywords=["latin","dictionary"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
indicatif = { version = "0.18", features = ["tokio"] }
reqwest = { version = "0.13.1", default-features = false, features = ["json", "query", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49", features = ["macros", "rt-multi-thread", "io-util"] }
